--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+yarn.lock
+packages-lock.json
 
 node_modules
 dist
@@ -13,7 +15,8 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
+*~
+.vscode/
 !.vscode/extensions.json
 .idea
 .DS_Store
