--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^4.0.1",
+    "date-picker-svelte": "^2.4.3",
     "svelte": "^3.57.0",
     "svelte-check": "^2.10.3",
     "tslib": "^2.5.0",
@@ -20,6 +21,12 @@
   },
   "dependencies": {
     "@carbon/icons": "^11.19.0",
+    "@svelteuidev/composables": "^0.12.1",
+    "@svelteuidev/core": "^0.12.1",
+    "@svelteuidev/dates": "^0.12.1",
+    "@svelteuidev/motion": "^0.12.1",
+    "@svelteuidev/preprocessors": "^0.12.1",
+    "dayjs": "^1.11.7",
     "svelte-collections": "^1.1.16",
     "svelte-material-icons": "^3.0.4",
     "svelte-navigator": "^3.2.2"
