--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@svelteuidev/dates": "^0.12.1",
     "@svelteuidev/motion": "^0.12.1",
     "@svelteuidev/preprocessors": "^0.12.1",
+    "axios": "^1.4.0",
+    "csvtojson": "^2.0.10",
     "dayjs": "^1.11.7",
     "svelte-collections": "^1.1.16",
     "svelte-material-icons": "^3.0.4",
